<resources>
    <string name="About">关于</string>
    <string name="Address">地址：</string>
    <string name="Automatic_save_data">自动保存心电数据</string>
    <string name="Automatically_upload_data">自动将心电数据上传到云服务</string>
    <string name="BLE_state">蓝牙连接状态：已连接</string>
    <string name="BLE_state1">蓝牙连接状态：断开</string>
    <string name="Cancel_cut">取消截取</string>
    <string name="Connecting_bluetooth">正在连接蓝牙设备</string>
    <string name="Connecting_bluetooth_outtime">蓝牙设备连接超时，请重新连接！</string>
    <string name="Cut">截取</string>
    <string name="Device_ID">设备 ID:</string>
    <string name="Device_Name">设备名称:</string>
    <string name="Device_information">设备信息</string>
    <string name="Device_is_programming">固件正在更新！</string>
    <string name="Disclaimer">"       欢迎您使用ECG Air心电产品！
       请您在使用ECG Air产品（以下称“本产品”）前仔细阅读并充分理解本产品用户协议（以下称“本协议”）的各款内容。特别是免除或限制责任的以及对用户的权利限制。您的下载、安装、使用、注册、登陆本产品软件以及使用本产品硬件等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。如果您未满18岁，请在监护人的陪同下阅读本协议。
       本协议系由您与广州沃里医疗科技有限公司（以下或简称“本公司”）所订立的相关权利义务协议，用以描述本产品向您提供服务及您使用本产品所涉及的详细规定。根据国家法律法规变化及网络运营需要，本公司有权对本协议条款不时地进行修改，修改后的协议一旦发布即生效，并代替原来的协议。用户有义务不时关注并阅读最新版的协议及产品公告。用户如不同意本公司对本协议所作的任何变更，须立即停止使用本产品。如用户在本协议变更后继续使用本产品，即视作用户已完全同意变更后的协议。
       本协议内容如下：
       1 本产品的记录结果仅作电生理教学示范使用，用户不能依据记录结果自行诊断或采取治疗措施。
       2 您理解并同意本产品在产品使用说明书的适用范围和使用方法内、禁忌症排除的范围外进行。我们不对超出以上范围的适用性承担责任。
       3 您可以为非商业目的在使用的手机等移动设备上安装、使用、显示、运行本产品软件。
       4 请勿对本产品软件进行反向工程、反向汇编、反向编译等；
       5 本协议未明示授权的其他一切权利仍归本公司所有，用户使用其他权利时须另外取得本公司的书面同意。
       6 您理解并同意我们会尽商业上的合作努力保障本产品软件的正常使用，但是我们不能保障无故障产生，在故障产生时请及时与本公司联系维修；用户在使用本产品软件过程中，须自行承担我们不可控制的风险内容，包括但不限于遭遇手机病毒，手机操作系统崩溃、网络无法连接、数据服务器故障、由于不可抗拒因素可能引起的个人信息丢失和泄露风险等各种不可控因素。
       7 对于本产品软件相关信息等，未经本公司书面同意，请勿擅自实施包括但不限于下列行为：使用、复制、修改、链接、转载、汇编、发表、出版，建立镜像站点、擅自借助本产品软件发展与之有关的衍生产品、作品、服务等；
       8 本产品服务中所涉及的ECG Air文字、图形或其组成，以及其他本公司及产品、服务名称，均为本公司之商标。未经商标权利人事先书面同意，用户不得将上述商标以任何方式展示或使用或作其他处理，也不得向他人表明您有权展示、使用、或其他有权处理上述商标的行为。
       9 隐私保护
       用户同意，本产品使用用户的注册信息、用户名、密码等信息，登陆进入用户的注册账户，进行证据保存，包括但不限于公证、见证等。本公司保证不会将用户的注册资料及用户在使用本产品时存储在本公司的非公开内容用于任何非法的用途，且保证在法律法规要求的范围外，将单个用户的注册资料进行商业上的利用时应事先获得用户的同意。
       同时，用户提供的既往病情信息、个人信息和上传的记录数据信息，均自行操作采集、获取和提供，需要个人确保录入或者上传信息及时、准确。本产品对下列内容和状况不承担任何责任：
       1) 使用者提供的信息有误；
       2) 因个人操作原因造成的数据不正确；
       3) 因耗材原因造成的数据干扰和异常；
       4) 因移动终端设备、硬件采集设备和网络异常等原因等造成的各种异常状况；
       5) 因网络服务器和存储器故障，造成的数据异常和丢失；
       10 用户在使用本产品的过程中应遵守国家法律法规及政策规定，因其使用本产品而产生的行为后果由用户自行承担。
       在上述说明的情况下，对于因使用本产品或无法使用本产品而导致的任何责任损失赔偿，本公司均无需承担法律责任。
       本公司对以上内容拥有最终解释权。"</string>
    <string name="Disconnect_and_check">“无发现设备，请检测设备连接”</string>
    <string name="Download">从云端下载</string>
    <string name="ECG">心电</string>
    <string name="ECG_measurement_time">心电定时采集时间设置</string>
    <string name="ECG_rec">心电记录</string>
    <string name="ECG_waveform_analysis">完整的心电波形分析（将影响心率计算）</string>
    <string name="Edit">编辑</string>
    <string name="Email">电子邮件:</string>
    <string name="Enable_Fall_detection">开启摔倒检测</string>
    <string name="Enable_Pedometer">开启计步</string>
    <string name="Exit">退出</string>
    <string name="Fall_detection">摔倒检测</string>
    <string name="Firmware_Updata">固件在线升级( OAD )</string>
    <string name="Firmware_version">固件版本：</string>
    <string name="Heartrate_alarm_delay">心率异常警报延时</string>
    <string name="Import">导入</string>
    <string name="Limitless">无限制</string>
    <string name="NOT_support_firmware_updata">当前设备不支持固件在线升级！</string>
    <string name="Need_open_bluetooth">请打开手机蓝牙设备</string>
    <string name="No">否</string>
    <string name="No_image_selected">未选择固件镜像</string>
    <string name="Not_completed">未完成</string>
    <string name="Pedometer">计步设置</string>
    <string name="Pedometer_rec">计步记录</string>
    <string name="Personal_information">个人信息</string>
    <string name="Phone">电话：</string>
    <string name="Power_low">ECG Air电量低于</string>
    <string name="Real_time_data_upload">心电数据实时上传（用于远程监护）</string>
    <string name="Real_time_upload">实时上传心电数据：是</string>
    <string name="Real_time_upload1">实时上传心电数据：否</string>
    <string name="Records">记录</string>
    <string name="Risk_marker_desc">一键标记一段时间内不适的心电记录</string>
    <string name="Risk_marker_open">启用主观不适记录功能</string>
    <string name="SMS_alarm_desc">一键发送求救短信（使用GPS可提供较具体的位置信息）</string>
    <string name="SMS_alarm_open">启用短信报警求救功能</string>
    <string name="Save">保存</string>
    <string name="Save_cut">保存截取</string>
    <string name="Save_to_file">是否保存心电记录？</string>
    <string name="Saving">正在保存</string>
    <string name="Scan">扫描</string>
    <string name="Scan_device">扫描蓝牙设备</string>
    <string name="Setting">设置</string>
    <string name="Start">开始</string>
    <string name="Stop">停止</string>
    <string name="The_current_firmware">当前固件版本：</string>
    <string name="The_new_firmware">新固件版本：</string>
    <string name="Tip">提示</string>
    <string name="Walking_daily_target">计步目标</string>
    <string name="Yes">是</string>
    <string name="accept">接受</string>
    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="age">年龄：</string>
    <string name="app_name">伊心健</string>
    <string name="auto_save">自动保存：是</string>
    <string name="auto_save1">自动保存：否</string>
    <string name="begin_updata_firmware">开始更新固件</string>
    <string name="birthdate">生日：</string>
    <string name="ble_not_connect">蓝牙设备未连接！</string>
    <string name="ble_will_disconnected">蓝牙设备将要断开连接！</string>
    <string name="cancle">取消</string>
    <string name="check_update">检查软件更新</string>
    <string name="click_to_select_date">点击此处选择日期</string>
    <string name="confirm">我已阅读并同意以上条款</string>
    <string name="cur_version">当前软件版本</string>
    <string name="custom_firmware">选择固件镜像</string>
    <string name="cut_model">截取模式</string>
    <string name="d_open_gps_prompt">GPS 未打开，是否需要现在打开 GPS ？</string>
    <string name="d_open_gps_title">打开 GPS</string>
    <string name="delete">删除</string>
    <string name="delete_rec">是否删除该记录？</string>
    <string name="desription">肢体 I 导联</string>
    <string name="device_battery">设备电量:</string>
    <string name="device_disconnected">蓝牙设备已断开连接！！</string>
    <string name="device_is_running">设备正在工作，请先停止设备工作！</string>
    <string name="device_unsupport">蓝牙设备不被支持！</string>
    <string name="diff_pwd">密码与确认密码不一致！</string>
    <string name="download">下载</string>
    <string name="downloading">正在下载..</string>
    <string name="ecg_alarm_hand_off">心率警报：已停用</string>
    <string name="ecg_alarm_status_off">心率警报：关</string>
    <string name="ecg_alarm_status_on">心率警报：开</string>
    <string name="ecg_filter_status_off">滤波器：关</string>
    <string name="ecg_filter_status_on">滤波器：开</string>
    <string name="eme_phone">紧急联系电话：</string>
    <string name="eme_phone_hint">电话号码</string>
    <string name="end">结束</string>
    <string name="exit">退出</string>
    <string name="exit_msg">是否退出程序？</string>
    <string name="exit_title">退出</string>
    <string name="f_name">名</string>
    <string name="find_new_ver">发现有新版本！</string>
    <string name="find_service">发现设备服务</string>
    <string name="find_service_finish">发现设备服务完成</string>
    <string name="firmware_A">固件A</string>
    <string name="firmware_B">固件B</string>
    <string name="first_name">名：</string>
    <string name="five_Minute">5 分钟</string>
    <string name="fun_scan">扫描蓝牙设备</string>
    <string name="fw_need_update">请更新固件</string>
    <string name="fw_update_tips">请确保手机和ECG Air电量充足，网络保持通畅，然后进行固件更新。</string>
    <string name="generating_image">正在生成图片..</string>
    <string name="get_device_info">获取设备信息</string>
    <string name="get_user_info">获取用户信息</string>
    <string name="go_on">继续</string>
    <string name="height">身高：</string>
    <string name="info_important">该信息非常重要，请仔细填写！</string>
    <string name="l_about">个人信息</string>
    <string name="l_auto_login">记住登陆状态</string>
    <string name="l_bar_ecg_list">心电记录</string>
    <string name="l_byte">字节：</string>
    <string name="l_calories">消耗卡路里</string>
    <string name="l_close_dev">断开设备连接</string>
    <string name="l_connect_dev">请连接ECG Air</string>
    <string name="l_custom_content">自定义内容</string>
    <string name="l_disconnect">断开</string>
    <string name="l_ecg_comment">添加心电记录描述</string>
    <string name="l_ecg_lead"><b>导联</b></string>
    <string name="l_ecg_rec_avg"><b>平均心率</b></string>
    <string name="l_ecg_rec_date"><b>日期</b></string>
    <string name="l_ecg_rec_desec">描述：</string>
    <string name="l_ecg_rec_long"><b>记录长度</b></string>
    <string name="l_ecg_rec_macn"><b>采集设备</b></string>
    <string name="l_ecg_rec_name"><b>记录名</b></string>
    <string name="l_ecg_rec_rate_unit">Bpm</string>
    <string name="l_ecg_scale_12.5">25mm/s, 5mm/mv</string>
    <string name="l_ecg_scale_25">25mm/s, 10mm/mv</string>
    <string name="l_ecg_scale_50">50mm/s, 20mm/mv</string>
    <string name="l_edit_cmt">编辑注释</string>
    <string name="l_filter">滤波器</string>
    <string name="l_filter_btn">滤波器</string>
    <string name="l_find_pwd">忘记密码</string>
    <string name="l_front">上一个异常</string>
    <string name="l_fw_incorrect_img">"无效的固件镜像，请选择正确的固件镜像文件"</string>
    <string name="l_fw_ready">"固件更新准备就绪"</string>
    <string name="l_fw_update_cancel">"固件更新已被取消"</string>
    <string name="l_fw_update_ok">"固件更新完成！"</string>
    <string name="l_fw_update_start">"开始更新固件"</string>
    <string name="l_ha_higher_than">心率大于</string>
    <string name="l_ha_less_than">心率小于</string>
    <string name="l_ha_type">警报类型</string>
    <string name="l_ha_type_sound">响铃</string>
    <string name="l_ha_type_vibration">振动</string>
    <string name="l_ha_type_vibration_sound">振动并响铃</string>
    <string name="l_heart_rate_alarm">心率警报设置</string>
    <string name="l_idle">准备就绪</string>
    <string name="l_img">固件镜像</string>
    <string name="l_knowledge">心电知识</string>
    <string name="l_login_btn">登陆</string>
    <string name="l_login_name">用户名</string>
    <string name="l_login_pwd">密码</string>
    <string name="l_main">心电功能</string>
    <string name="l_mark_time">标记时长(秒)</string>
    <string name="l_name">姓</string>
    <string name="l_next">下一个异常</string>
    <string name="l_no_data">无记录</string>
    <string name="l_no_help">暂无帮助内容</string>
    <string name="l_none">无</string>
    <string name="l_open_file_fail">文件打开失败：</string>
    <string name="l_p_ecg_filter">心电文件名或记录日期</string>
    <string name="l_phone_select_title">接收短信手机号码列表</string>
    <string name="l_rec">查看心电记录</string>
    <string name="l_reg_btn">注册账号</string>
    <string name="l_reverse">翻转波形</string>
    <string name="l_scale">走速</string>
    <string name="l_scan_dev">扫描 ECG Air</string>
    <string name="l_sec">秒</string>
    <string name="l_sel">被选择</string>
    <string name="l_set">设置</string>
    <string name="l_size">大小：</string>
    <string name="l_sos_title">紧急按键功能设置</string>
    <string name="l_status_connected">设备已连接</string>
    <string name="l_status_disconnect">设备已断开</string>
    <string name="l_step">计步</string>
    <string name="l_step_complete">完成程度(%)</string>
    <string name="last_name">姓：</string>
    <string name="medicine">曾使用药物</string>
    <string name="men">男</string>
    <string name="menu_ptions">选项</string>
    <string name="name_hint">用户名</string>
    <string name="no">否</string>
    <string name="profession">职业：</string>
    <string name="pwd_confirm">确认密码：</string>
    <string name="pwd_confirm_hint">密码</string>
    <string name="pwd_hint">密码</string>
    <string name="register">注册</string>
    <string name="rev_model">观察模式</string>
    <string name="rigister_dis">(您填写的内容将作为诊断参考资料，请认真填写。)</string>
    <string name="send_by_email">通过电子邮件发送记录</string>
    <string name="sex">性别：</string>
    <string name="share_ecg_picture">图片分享</string>
    <string name="share_record">分享</string>
    <string name="smoker">是否吸烟：</string>
    <string name="start">开始</string>
    <string name="submit">提交</string>
    <string name="title_activity_help">帮助</string>
    <string name="upload_to_server">上传到云服务</string>
    <string name="weight">体重：</string>
    <string name="women">女</string>
    <string name="yes">是</string>
</resources>