<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:background="@drawable/corners_bg"
        android:orientation="vertical"
        android:padding="10.0dip">

        <TextView
            android:id="@+id/setting_item1_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/actionbar_cl"
            android:textSize="20.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_margin="5.0dip"
            android:background="@color/stroke_cl" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_login_name"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/regiter_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-_"
            android:hint="@string/name_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_login_pwd"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_confirm"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/register_password_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_confirm_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/btn_sel"
            android:padding="5.0dip"
            android:text="@string/register" />
    </LinearLayout>
</RelativeLayout>