<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:alpha="0.9"
    android:background="@drawable/corners_bg_ecg_tool"
    android:padding="10.0dip">

    <Switch
        android:id="@+id/filter_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12.0dip"
        android:text="@string/l_filter" />

    <Button
        android:id="@+id/btn_reverse"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_switch"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/corners_bg"
        android:padding="5.0dip"
        android:text="@string/l_reverse" />

    <View
        android:id="@+id/ecg_scale_split"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@id/btn_reverse"
        android:layout_margin="8.0dip"
        android:background="@color/stroke_cl" />

    <TextView
        android:id="@+id/l_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ecg_scale_split"
        android:text="@string/l_scale" />

    <RadioGroup
        android:id="@+id/ecg_scale_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/l_scale"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/ecg_scale_type_12.5"
            android:text="@string/l_ecg_scale_12.5"/>

        <RadioButton
            android:id="@+id/ecg_scale_type_25"
            android:checked="true"
            android:text="@string/l_ecg_scale_25" />

        <RadioButton
            android:id="@+id/ecg_scale_type_50"
            android:text="@string/l_ecg_scale_50" />
    </RadioGroup>

    <View
        android:id="@+id/ecg_jump_split"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@id/ecg_scale_type"
        android:layout_margin="6.0dip"
        android:background="@color/stroke_cl" />

    <Button
        android:id="@+id/btn_previous"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/ecg_jump_split"
        android:layout_marginTop="2.0dip"
        android:background="@drawable/corners_bg"
        android:text="@string/l_front" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/ecg_jump_split"
        android:layout_alignBottom="@id/btn_previous"
        android:layout_marginLeft="10.0dip"
        android:layout_toRightOf="@id/btn_previous"
        android:background="@drawable/corners_bg"
        android:text="@string/l_next" />
</RelativeLayout>