<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:alpha="0.9"
    android:background="@drawable/corners_bg_ecg_tool"
    android:padding="10.0dip">

    <Button
        android:id="@+id/btn_share_picture"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/corners_bg"
        android:padding="5.0dip"
        android:text="@string/share_ecg_picture" />

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_share_picture"
        android:layout_alignLeft="@id/btn_share_picture"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/corners_bg"
        android:padding="5.0dip"
        android:text="@string/send_by_email" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_send_email"
        android:layout_alignLeft="@id/btn_send_email"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/corners_bg"
        android:padding="5.0dip"
        android:text="@string/upload_to_server" />
</RelativeLayout>